# melos-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  Taskfile.yml
.github/workflows/: ci.yml  release.yml
Formula/: melos-rs.rb  melos-tui.rb
crates/melos-cli/: Cargo.toml
crates/melos-cli/src/: cli.rs  filter_ext.rs  main.rs  render.rs
crates/melos-cli/src/commands/: analyze.rs  bootstrap.rs  build.rs  clean.rs  exec.rs  format.rs  health.rs  init.rs  list.rs  pub_cmds.rs  publish.rs  run.rs  test.rs  version.rs
crates/melos-cli/src/runner/: mod.rs
crates/melos-core/: Cargo.toml
crates/melos-core/src/: events.rs  lib.rs  runner.rs  workspace.rs
crates/melos-core/src/commands/: analyze.rs  bootstrap.rs  build.rs  clean.rs  exec.rs  format.rs  health.rs  init.rs  list.rs  mod.rs  pub_cmds.rs  publish.rs  run.rs  test.rs  version.rs
crates/melos-core/src/config/: filter.rs  mod.rs
crates/melos-core/src/package/: mod.rs
crates/melos-core/src/watcher/: mod.rs
crates/melos-tui/: Cargo.toml
crates/melos-tui/src/: app.rs  dispatch.rs  event.rs  logging.rs  main.rs  theme.rs  ui.rs
crates/melos-tui/src/views/: commands.rs  execution.rs  health.rs  help.rs  mod.rs  options.rs  packages.rs  results.rs
crates/melos-tui/themes/: catppuccin.json  default-dark.json  default-light.json  dracula.json  everforest.json  ffe.json  gruvbox.json  nord.json  one.json  rose-pine.json  solarized.json  tokyo-night.json
docs/: migration-from-melos.md
docs/rationale/: 0001_dual_config_support.md  0002_benchmark_comparison.md  0003_gof_patterns.md  0004_build_command.md  0005_proactive_conflict_detection.md  0006_core_lib_extraction.md  0007_tui_frontend.md
scripts/: update-formula.sh
src/: cli.rs  main.rs  workspace.rs
src/commands/: analyze.rs  bootstrap.rs  build.rs  clean.rs  exec.rs  format.rs  health.rs  init.rs  list.rs  mod.rs  pub_cmds.rs  publish.rs  run.rs  test.rs  version.rs
src/config/: filter.rs  mod.rs  script.rs
src/package/: filter.rs  mod.rs
src/runner/: mod.rs
src/watcher/: mod.rs
tests/: cli.rs
