[package]
name = "melos-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI replacement for Melos - Flutter/Dart monorepo management tool"
license = "MIT"

[[bin]]
name = "melos-rs"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5.60", features = ["derive"] }

# Serialization / Config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
yaml_serde = "0.10"

# File system
glob = "0.3.3"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Terminal output
colored = "3.1.1"
indicatif = "0.18.4"

# Regex for pubspec parsing
regex = "1.12.3"

# Semver for version management
semver = "1.0.27"

# Path utilities
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.19"
