[workspace]
members = ["crates/melos-core", "crates/melos-cli"]
resolver = "3"

[workspace.package]
version = "0.5.3"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Serialization / Config
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.3"

# File system
glob = "0.3.3"

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Parallel iteration
rayon = "1.11.0"

# Regex for pubspec parsing
regex = "1.12.3"

# Semver for version management
semver = "1.0.27"

# Path utilities
pathdiff = "0.2.3"

# File watching
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"

# CLI
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = "4.5.66"

# Terminal output
colored = "3.1.1"
indicatif = "0.18.4"

# Dev
tempfile = "3.25.0"
assert_cmd = "2.1.2"
predicates = "3.1.4"

# Internal
melos-core = { path = "crates/melos-core" }
